2016-01-22 - Dejan Golja <dejan@golja.org> - 1.2.3
* Another retry to rebuild repack the module to fix the PaxHeaders bsd tar bug

2016-01-18 - Dejan Golja <dejan@golja.org> - 1.2.2
* module Remove PaxHeaders from distributed package, so it works with r10k

2015-07-04 - Dejan Golja <dejan@golja.org> - 1.2.1
* remove (present|absent) restriction on $package_ensure
* add support for SLES

2015-05-16 - Dejan Golja <dejan@golja.org> - 1.2.0
* autorequire user type when using gnupg_key (tnx to tcinel@atlassian.com)
* added two new custom facts:
  * gnupg_command - get full path to gpg exe
  * gnupg_installed - determine if gpg exe exists on system

2015-03-24 - Dejan Golja <dejan@golja.org> - 1.1.1
* supports username with -

2015-02-21 - Dejan Golja <dejan@golja.org> - 1.1.0
* properly supports private key (added new paramater key_type
  for gnupg_key type)
* added new parameter key_content for gnupg_key type
  to make it easier integrate hiera lookups. More info check README

Special thanks to Tobias Clemson (https://github.com/tobyclemson)

2014-10-20 - Dejan Golja <dejan@golja.org> - 1.0.0
* remove support for puppet 2.7.x due to the native type
* added beaker system spec tests
* Update type definition so it uses Puppet::Util::Execution.execute
  instead of Puppet::Util::SUIDManager.run_and_capture (deprecated)
* bump version to 1.0.0

2014-10-07 - Dejan Golja <dejan@golja.org> - 0.0.5
* bugfix for https keys

2014-08-17 - Dejan Golja <dejan@golja.org> - 0.0.4
* Update metadata.json and removed Modulefile due to 
  as of Puppet 3.6 the Modulefile has been deprecated

2014-03-16 - Dejan Golja <dejan@golja.org> - 0.0.3
* Added Puppet Forge Search by Module Compatibility

2013-10-22 - Dejan Golja <dejan@golja.org> - 0.0.2
* public release for Forge

2013-10-12 - Dejan Golja <dejan@golja.org> - 0.0.1
* initial beta version not released to the public